# SteamDeepDive

./: .gitignore  README.md  pyproject.toml
src/main/: games.ipynb  games_eda.ipynb  rec_system.ipynb  recommendation_system.ipynb  reviews.ipynb  reviews_eda.ipynb
src/utils/: cleanup_steam_games.py  cleanup_steam_reviews.py  games_to_csv.py  reviews_to_csv.py  sample_data.py  test.py
