[project]
name = "steamdeepdive"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "gdown>=5.2.0",
    "matplotlib>=3.9.2",
    "pandas>=2.2.3",
    "pathlib>=1.0.1",
    "pip>=24.3.1",
    "scikit-learn>=1.5.2",
    "seaborn>=0.13.2",
    "tabulate>=0.9.0",
    "textblob>=0.18.0.post0",
    "tqdm>=4.67.0",
    "wordcloud>=1.9.4",
]
